orientdb query now working, consolidated unit tests, prelim impl complete