@@ -120,17 +120,17 @@
     <dependency>
       <groupId>com.orientechnologies</groupId>
       <artifactId>orient-commons</artifactId>
-      <version>1.7-rc2</version>
+      <version>1.7</version>
     </dependency>
     <dependency>
       <groupId>com.orientechnologies</groupId>
       <artifactId>orientdb-core</artifactId>
-      <version>1.7-rc2</version>
+      <version>1.7</version>
     </dependency>
     <dependency>
       <groupId>com.orientechnologies</groupId>
       <artifactId>orientdb-client</artifactId>
-      <version>1.7-rc2</version>
+      <version>1.7</version>
     </dependency>
     <!-- junit -->
     <dependency>
@@ -208,6 +208,18 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.17</version>
+        <configuration>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+          <!--
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          -->
+        </configuration>
       </plugin>
     </plugins>
   </build>
